# visisipy

./: .gitignore  .readthedocs.yml  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  example.py  generate_models.py  model.json  pyproject.toml  renovate.json  ruff_defaults.toml  try_opd.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  python-publish.yml  python-test-publish.yml
EyeSimulator/: __init__.py  models.py
docs/: conf.py  contributing.md  index.md
docs/_templates/: download-notebook.html  edit-this-page.html
docs/examples/: index.md
docs/examples/Backend comparison/: backend_comparison.ipynb
docs/examples/Direct modification of the optical system in OpticStudio/: direct_opticstudio_access.ipynb
docs/examples/Patient-specific mapping of fundus photographs to three-dimensional ocular imaging/: helpers.py  raytracing.ipynb
docs/user_guide/: 02_example.ipynb  04_backend.ipynb  05_analyses.ipynb  06_backend_direct.ipynb  07_custom_surfaces.ipynb  analyses.ipynb  analyses.md  asymmetric_models.md  backend.ipynb  backend.md  backend_direct.ipynb  backend_direct.md  backend_multiple.md  custom_surfaces.ipynb  custom_surfaces.md  example.ipynb  example.md  eye_models.ipynb  eye_models.md  index.md  installation.md  visualization.md
examples/Backend comparison/: backend_comparison.ipynb
examples/Patient-specific mapping of fundus photographs to three-dimensional ocular imaging/: helpers.py  raytracing.ipynb
examples/VPO 2024/: raytracing.ipynb
scripts/material_models/: .ruff.toml  fit_material_models.py  material_models_opticstudio.json  material_models_opticstudio_dispersion.json  material_models_optiland.json
scripts/test_data/: analysis_tests.py  config.py  generate_test_data.py
tests/: conftest.py  helpers.py  test_backend.py  test_import.py  test_plots.py  test_types.py  test_wavefront.py
tests/_data/analysis_results/: fft_mtf_0_0_opticstudio.csv  fft_mtf_0_0_optiland.csv  fft_mtf_0_10_opticstudio.csv  fft_mtf_0_10_optiland.csv  fft_mtf_10_0_opticstudio.csv  fft_mtf_10_0_optiland.csv  fft_psf_0_0_opticstudio.csv  fft_psf_0_0_optiland.csv  fft_psf_0_10_opticstudio.csv  fft_psf_0_10_optiland.csv  fft_psf_10_0_opticstudio.csv  fft_psf_10_0_optiland.csv  huygens_psf_0_0_opticstudio.csv  huygens_psf_0_0_optiland.csv  huygens_psf_0_10_opticstudio.csv  huygens_psf_0_10_optiland.csv  huygens_psf_10_0_opticstudio.csv  huygens_psf_10_0_optiland.csv  opd_map_0_0_opticstudio.csv  opd_map_0_0_optiland.csv  opd_map_0_10_opticstudio.csv  opd_map_0_10_optiland.csv  opd_map_10_0_opticstudio.csv  opd_map_10_0_optiland.csv  opd_map_10_5_opticstudio.csv  opd_map_10_5_optiland.csv  ray_trace_pupil_0_0_opticstudio.csv  ray_trace_pupil_0_0_optiland.csv  ray_trace_pupil_0_1_opticstudio.csv  ray_trace_pupil_0_1_optiland.csv  ray_trace_pupil_1_-1_opticstudio.csv  ray_trace_pupil_1_-1_optiland.csv  refraction_opticstudio.csv  refraction_optiland.csv  zernike_coefficients_0_0_opticstudio.csv  zernike_coefficients_0_0_optiland.csv  zernike_coefficients_0_10_opticstudio.csv  zernike_coefficients_0_10_optiland.csv  zernike_coefficients_10_0_opticstudio.csv  zernike_coefficients_10_0_optiland.csv  (+2 more)
tests/_data/test_load_models/: navarro_eye.json  navarro_eye.zmx
tests/analysis/: test_analyses.py  test_base.py
tests/analysis_results/: conftest.py  test_cardinal_points.py  test_mtf.py  test_opd_map.py  test_psf.py  test_ray_trace.py  test_raytrace.py  test_refraction.py  test_zernike_standard_coefficients.py
tests/models/: conftest.py  test_dict_conversion.py  test_factory.py  test_geometry.py  test_materials.py
tests/models/catalog/: test_bennett_rabbetts.py  test_gullstrand.py  test_navarro.py
tests/models/zoo/: test_bennett_rabbetts.py  test_gullstrand.py  test_navarro.py
tests/opticstudio/: conftest.py  test_analysis.py  test_backend.py  test_material_models.py  test_models.py  test_surfaces.py
tests/opticstudio/analysis/: conftest.py  test_cardinal_points.py  test_helpers.py  test_mtf.py  test_psf.py  test_raytrace.py  test_refraction.py  test_wavefront.py  test_zernike_coefficients.py
tests/optiland/: conftest.py  test_backend.py  test_material_models.py  test_models.py  test_surfaces.py
tests/optiland/analysis/: conftest.py  test_cardinal_points.py  test_helpers.py  test_mtf.py  test_psf.py  test_raytrace.py  test_refraction.py  test_wavefront.py  test_zernike_coefficients.py
visisipy/: __init__.py  _backend.py  _zospy_loader.py  analysis.bak.py  analysis.py  backend.py  models_old.py  plots.py  refraction.py  types.py  wavefront.py
visisipy/analysis/: __init__.py  base.py  cardinal_points.py  mtf.py  psf.py  raytracing.py  refraction.py  wavefront.py  zernike_standard_coefficients.py
visisipy/models/: __init__.py  base.py  factory.py  geometry.py  helpers.py  materials.py
visisipy/models/catalog/: __init__.py  bennett_rabbetts.py  gullstrand.py
visisipy/models/zoo/: __init__.py  bennett_rabbetts.py  gullstrand.py  navarro.py
visisipy/opticstudio/: __init__.py  analysis.py  backend.py  models.py  surfaces.py
visisipy/opticstudio/analysis/: __init__.py  cardinal_points.py  helpers.py  mtf.py  psf.py  raytrace.py  refraction.py  wavefront.py  zernike_coefficients.py
visisipy/optiland/: __init__.py  backend.py  models.py  surfaces.py
visisipy/optiland/analysis/: __init__.py  cardinal_points.py  helpers.py  mtf.py  psf.py  raytrace.py  refraction.py  wavefront.py  zernike_coefficients.py
